package com.expsn.cooker.model;

public enum Status {
    PENDING,
    APPROVED,
    REJECTED
}
